[tool.poetry]
name = "poetrypg"
version = "0.1.0"
description = ""
authors = ["Isaac Parker <isaac@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"ruamel.yaml" = "^0.17.21"
PyGithub = "^1.55"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
